# beeatlas

./: .editorconfig  .env.development  .gitignore  .lighthouserc.json  .mcp.json  BENCHMARK.md  CLAUDE.md  CONTEXT.md  PRODUCT.md  README.md  cn1aslg8kjalbbop9c4tbuhtghijusnb  eleventy.config.js  import.sql  index.html  lychee.toml  manifest  package-lock.json  package.json  vite-plugin-preload.ts  vite.config.ts
data/: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  add_hikes_as_places.py  add_new_places.py  add_wdfw_wildlife_areas.py  anti_entropy_pipeline.py  apply_real_boundaries.py  artifacts.py  artifacts.toml  assemble_notes.py  backbone.zip.dvc  backup_notes.py  build_coverage_basemaps.py  build_target_hosts.py  canonical_name.py  checklist_dedup.py  checklist_fuzzy_review.csv  checklist_name_resolution_audit.csv  checklist_pipeline.py  checklist_synonyms.csv  checklist_unmatched.csv  collector_maps.py  collectors_events_export.py  collectors_export.py  config.py  dem_pipeline.py  domain.py  download.py  dvc.yaml  ecdysis_pipeline.py  export.py  feeds.py  fetch_boundaries.py  geographies_pipeline.py  host_plant_lineage.py  inat_obs_pipeline.py  (+28 more)
data/.dlt/: config.toml
data/.planning/: STATE.md
data/checklists/: README.md  checklist_records_full.csv  wa_bee_checklist.tsv  wa_bee_checklist_records.tsv
data/curation/: target_hosts_overrides.csv  target_hosts_unresolved.csv
data/dbt/: dbt_project.yml  profiles.yml  run.sh
data/ecdysis/: __init__.py  download.py  occurrences.py
data/gbif/: .gitignore
data/gbif-backbone/: .gitignore  taxon.sql
data/inat/: download.py  observations.py  projects.py
data/links/: __init__.py  fetch.py
data/mm/: .gitignore
data/notes_app/: __init__.py  main.py
data/notes_store/: __init__.py  db.py  models.py  render.py  roles.py  seed.py
data/osu-mm/: labels-2025.sql
data/osu_mm/: labels-2025.sql
data/raw/: inat_expert_obs.csv  inat_expert_obs.sh
data/scripts/: audit_photo_toml.py  build_geojson.py  download.py  fetch_inat_links.py  verify-clean-checkout.sh
data/tests/: BASELINE.md  conftest.py  fixtures.py  test_add_hikes_as_places.py  test_add_wdfw_wildlife_areas.py  test_artifacts.py  test_backup_notes.py  test_build_coverage_basemaps.py  test_canonical_name.py  test_checklist_dedup.py  test_checklist_pipeline.py  test_checklist_reconcile.py  test_collector_maps.py  test_collectors_events_export.py  test_collectors_export.py  test_config.py  test_db_path_env.py  test_dbt_diff.py  test_dbt_scaffold.py  test_dbt_synonymy.py  test_dem_pipeline.py  test_domain.py  test_ecdysis_auth.py  test_export.py  (+35 more)
(+2467 files in other folders)
