[project]
name = "beeatlas-data"
version = "0.1.0"
description = "dlt pipelines for Washington Bee Atlas data ingestion"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dlt[duckdb]>=1.27.2",
    "duckdb>=1.5.4,<2",
    "pyarrow>=12",
    "requests",
    "beautifulsoup4",
    "boto3>=1.43.36",
    "dateparser",
    "pygbif",
    "rapidfuzz",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "dbt-duckdb==1.10.1",
    "pytest-randomly>=4.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not integration'"
markers = [
    "integration: validates real datasets/built artifacts (nightly tier); deselected by default",
]

[tool.beeatlas]
state_fips = "53"
