[project]
name = "beeatlas-data"
version = "0.1.0"
description = "dlt pipelines for Washington Bee Atlas data ingestion"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dlt[duckdb]>=1.28.1",
    "duckdb>=1.5.4,<2",
    "pyarrow>=12",
    "pyogrio>=0.11",  # GDAL-bundling reader for the PAD-US wilderness GDB (attribute-filter pushdown; see geographies_pipeline)
    "requests",
    "beautifulsoup4",
    "boto3>=1.43.50",
    "dateparser",
    "pygbif",
    "rapidfuzz",
    "alembic>=1.18.5",
    "sqlalchemy>=2.0.51,<3",
    "flask>=3.1.2",
    "waitress>=3.0.2",
    "flask-cors>=6.0.5",
    "nh3>=0.3.6",
    "markdown-it-py>=4.2.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "dbt-duckdb==1.10.1",
    "pytest-randomly>=4.1.0",
]

[tool.pytest.ini_options]
pythonpath = [".", ".."]
testpaths = ["tests", "../api/tests"]
addopts = "-m 'not integration'"
markers = [
    "integration: validates real datasets/built artifacts (nightly tier); deselected by default",
]

[tool.beeatlas]
state_fips = "53"
